<resources>
    <string name="AccountPickerFragment_tag">AccountPickerFragment</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="accessibility_next">Next</string>
    <string name="accessibility_pause">Pause</string>
    <string name="accessibility_play">Play</string>
    <string name="accessibility_prev">Previous</string>
    <string name="accessibility_skip_time_back">Skip backwards 10 seconds</string>
    <string name="accessibility_skip_time_forward">Skip forward 30 seconds</string>
    <string name="accessibility_thumbsDown">Thumbs down</string>
    <string name="accessibility_thumbsUp">Thumbs up</string>
    <string name="account_settings_key">account_settings_key</string>
    <string name="account_type_settings_key">account_type_settings_key</string>
    <string name="ad_unit_id_test_network">/57433053/GPM/gpm//mobile</string>
    <string name="adaptive_error_page_body">And its not anything you did. We cant complete your request right now.</string>
    <string name="adaptive_error_page_dismiss_button">dismiss</string>
    <string name="adaptive_error_page_retry_button">retry</string>
    <string name="adaptive_error_page_title">Somethings not right</string>
    <string name="added_to_library_tag">Added</string>
    <string name="api_stack_indicator_preference_key">api_stack</string>
    <string name="api_stack_indicator_preference_title">API Stack</string>
    <string name="apiary_endpoint_summary">Apiary endpoint selection</string>
    <string name="apiary_endpoint_title">Apiary endpoint</string>
    <string name="apiary_endpoints_screen">apiary_endpoints_key</string>
    <string name="autocache_key">autocache_key</string>
    <string name="autocache_summary">Download music for me</string>
    <string name="autocache_title">Auto-download</string>
    <string name="cache_streamed_key">cache_streamed_key</string>
    <string name="cache_streamed_title">Cache music while streaming</string>
    <string name="cast_app_id_selection_screen">cast_app_id_selection_key</string>
    <string name="cast_app_id_selection_summary">Cast App ID selection</string>
    <string name="cast_app_id_selection_title">Cast App ID</string>
    <string name="clear_cache_settings_key">clear_cache_settings_key</string>
    <string name="clear_cache_settings_title">Clear cache</string>
    <string name="close_ads_button_text">CLOSE</string>
    <string name="container_share">Share</string>
    <string name="content_filter_key">content_filter_key</string>
    <string name="content_filter_show_album_art_on_lockscreen">Show album art on lock screen</string>
    <string name="content_filter_show_album_art_on_lockscreen_key">content_filter_show_album_art_on_lockscreen_key</string>
    <string name="content_filter_title_radio">Block explicit songs in radio</string>
    <string name="debug_logs_key">debug_logs_key</string>
    <string name="debug_logs_summary">Enable additional music-specific logging on this device. Internal only.</string>
    <string name="debug_logs_title">Use debug logs</string>
    <string name="delete_my_library_setting_key">delete_my_library_setting_key</string>
    <string name="delete_my_library_setting_title">Delete my library</string>
    <string name="delete_recommendation_history_setting_key">delete_recommendation_history_setting_key</string>
    <string name="delete_recommendation_history_setting_title">Delete recommendation history</string>
    <string name="download_location_key">download_location_key</string>
    <string name="download_location_summary">Set where to store downloaded and cached music.</string>
    <string name="download_location_title">Storage location</string>
    <string name="download_quality_key">download_quality_key</string>
    <string name="download_quality_title">Download quality</string>
    <string name="download_queue_key">download_queue_key</string>
    <string name="download_queue_title">View download queue</string>
    <string name="equalizer_settings_key">equalizer_settings_key</string>
    <string name="equalizer_settings_summary">Adjust audio settings</string>
    <string name="equalizer_settings_title">Equalizer</string>
    <string name="features_preference_key">features</string>
    <string name="features_preference_title">Features</string>
    <string name="gift_subscription_setting_key">gift_subscription_setting_key</string>
    <string name="gift_subscription_setting_summary">Give a Google Play Music subscription</string>
    <string name="headphone_notification_settings_key">headphone_notification_settings_key</string>
    <string name="loc_reporting_setting_key">location_reporting_setting_key</string>
    <string name="loc_reporting_setting_title">Manage Google Location History</string>
    <string name="manage_family_settings_key">manage_family_settings_key</string>
    <string name="manage_fop_key">manage_fop_key</string>
    <string name="manage_fop_title">Update payment method</string>
    <string name="manage_nautilus_settings_key">manage_nautilus_settings_key</string>
    <string name="marketing_notifications_settings_key">marketing_notifications_settings_key</string>
    <string name="marketing_notifications_settings_summary">Notify me about music recommendations, promotions, or feature updates (on this device only)</string>
    <string name="marketing_notifications_settings_title">For recommendations and updates</string>
    <string name="media_key_autoplay_toggle_key">bt_autoplay_toggle_key</string>
    <string name="media_key_autoplay_toggle_summary">For example, car Bluetooth, wired headsets</string>
    <string name="media_key_autoplay_toggle_title">Allow external devices to start playback</string>
    <string name="menu_add_to_my_library">Add to library</string>
    <string name="music_pa_endpoint_summary">Music Private APIs endpoint selection</string>
    <string name="music_pa_endpoint_title">Music Private APIs endpoint</string>
    <string name="music_pa_endpoints_screen">music_pa_endpoints_key</string>
    <string name="music_version_unknown">Unknown version</string>
    <string name="my_devices_setting_key">my_devices_setting_key</string>
    <string name="my_devices_setting_title">Manage your devices</string>
    <string name="my_history_setting_key">my_history_setting_key</string>
    <string name="my_history_setting_title">Manage Play Music history</string>
    <string name="no_account_selected_summary">Tap to choose account</string>
    <string name="offlinedl_only_on_wifi_key">offlinedl_on_wifi_key</string>
    <string name="offlinedl_only_on_wifi_summary">Reduces data usage</string>
    <string name="offlinedl_only_on_wifi_title">Download only on Wi-Fi</string>
    <string name="overlay_ad_size">MEDIUM_RECTANGLE</string>
    <string name="parental_controls">parental_control_key</string>
    <string name="parental_controls_allow_explicit_songs">Allow explicit songs</string>
    <string name="parental_controls_title">Parental controls</string>
    <string name="playlist_description_hint">Description</string>
    <string name="playlist_name_hint">Name</string>
    <string name="privacy_help_center_setting_key">privacy_help_center_setting_key</string>
    <string name="privacy_help_center_setting_title">Privacy help center</string>
    <string name="privacy_policy_key">privacy_policy_key</string>
    <string name="privacy_policy_title">Privacy Policy</string>
    <string name="public_description_online">Anyone can see and listen</string>
    <string name="public_title">Public</string>
    <string name="refresh_key">refresh_key</string>
    <string name="refresh_title">Refresh</string>
    <string name="send_gift">Send gift</string>
    <string name="settings_activity_history_key">settings_category_activity_history_key</string>
    <string name="settings_activity_history_title">Manage Activity Controls</string>
    <string name="settings_category_notifications_caps">NOTIFICATIONS</string>
    <string name="settings_category_notifications_key">settings_category_notifications_key</string>
    <string name="settings_category_privacy_location_caps">PRIVACY &amp; LOCATION</string>
    <string name="settings_category_privacy_location_key">settings_category_privacy_location_key</string>
    <string name="settings_catergory_account_caps">ACCOUNT</string>
    <string name="settings_catergory_account_key">settings_catergory_account_key</string>
    <string name="settings_catergory_developer_caps">ABOUT PLAY MUSIC</string>
    <string name="settings_catergory_developer_key">settings_catergory_developer_key</string>
    <string name="settings_catergory_download_caps">DOWNLOADING</string>
    <string name="settings_catergory_download_key">settings_catergory_download_key</string>
    <string name="settings_catergory_general_caps">GENERAL</string>
    <string name="settings_catergory_general_key">settings_catergory_general_key</string>
    <string name="settings_catergory_streaming_caps">PLAYBACK</string>
    <string name="settings_catergory_streaming_key">settings_catergory_streaming_key</string>
    <string name="settings_catergory_wear_caps">WEAR OS</string>
    <string name="settings_catergory_wear_key">settings_catergory_wear_key</string>
    <string name="sleep_timer_settings_key">sleep_timer_settings_key</string>
    <string name="sleep_timer_settings_title">Sleep timer</string>
    <string name="stream_only_on_wifi_key">stream_only_on_wifi_key</string>
    <string name="stream_only_on_wifi_summary">Reduces data usage</string>
    <string name="stream_only_on_wifi_title">Stream only on Wi-Fi</string>
    <string name="stream_quality_for_mobile_key">stream_quality_for_mobile_key</string>
    <string name="stream_quality_for_mobile_title">Quality on mobile network</string>
    <string name="stream_quality_for_wifi_key">stream_quality_for_wifi_key</string>
    <string name="stream_quality_for_wifi_title">Quality on wifi network</string>
    <string name="stream_quality_normal">Normal</string>
    <string name="stream_settings">Music settings</string>
    <string name="streamauth_endpoint_summary">StreamAuthFE endpoint selection</string>
    <string name="streamauth_endpoint_title">StreamAuthFE endpoint</string>
    <string name="streamauth_endpoints_screen">streamauth_endpoints_key</string>
    <string name="subdlg_autodownload">Auto-download</string>
    <string name="subdlg_autodownload_subtitle_latest_3">Download the latest 3 episodes</string>
    <string name="subdlg_notifications">Notifications</string>
    <string name="subdlg_notifyme">Notify me about new episodes</string>
    <string name="subdlg_playbackorder">Playback order</string>
    <string name="subscribe_tag">Subscribe</string>
    <string name="sync_to_wear_key">sync_to_wear_key</string>
    <string name="sync_to_wear_summary">For offline playback</string>
    <string name="sync_to_wear_title">Download to Wear OS</string>
    <string name="user_quiz_setting_key">user_quiz_setting_key</string>
    <string name="user_quiz_setting_title">Improve your recommendations</string>
    <string name="wear_manage_downloads_key">wear_manage_downloads_key</string>
    <string name="wear_manage_downloads_title">Manage Wear downloads</string>
</resources>