<?xml version="1.0" encoding="utf-8"?>
<merge
  xmlns:android="http://schemas.android.com/apk/res/android">
    <FrameLayout android:id="@id/button_frame" android:layout_width="fill_parent" android:layout_height="@dimen/widget_music_button_size" android:layout_alignParentBottom="true">
        <LinearLayout android:gravity="center" android:layout_gravity="center" android:orientation="horizontal" android:id="@id/button_row" android:background="@color/white" android:padding="1.0dip" android:focusable="true" android:layout_width="fill_parent" android:layout_height="fill_parent" android:weightSum="5.0">
            <ImageButton android:id="@id/thumbs_up" android:background="@drawable/play_highlight_overlay_action_button" android:focusable="true" android:layout_width="0.0dip" android:layout_height="fill_parent" android:src="@drawable/ic_thumbs_up_default" android:scaleType="center" android:layout_weight="1.0" android:contentDescription="@string/accessibility_thumbsUp" />
            <ImageButton android:id="@id/skip_backward" android:background="@drawable/play_highlight_overlay_action_button" android:focusable="true" android:visibility="gone" android:layout_width="0.0dip" android:layout_height="fill_parent" android:src="@drawable/ic_10_previous" android:scaleType="center" android:layout_weight="1.0" android:contentDescription="@string/accessibility_skip_time_back" />
            <ImageButton android:id="@id/prev" android:background="@drawable/play_highlight_overlay_action_button" android:focusable="true" android:layout_width="0.0dip" android:layout_height="fill_parent" android:src="@drawable/ic_rew_dark" android:scaleType="center" android:layout_weight="1.0" android:contentDescription="@string/accessibility_prev" />
            <ImageButton android:id="@id/play" android:background="@drawable/play_highlight_overlay_action_button" android:layout_width="0.0dip" android:layout_height="fill_parent" android:src="@drawable/ic_play_black" android:scaleType="fitCenter" android:layout_weight="1.0" android:contentDescription="@string/accessibility_play" />
            <ImageButton android:id="@id/pause" android:background="@drawable/play_highlight_overlay_action_button" android:visibility="gone" android:layout_width="0.0dip" android:layout_height="fill_parent" android:src="@drawable/ic_pause_black_large" android:scaleType="fitCenter" android:layout_weight="1.0" android:contentDescription="@string/accessibility_pause" />
            <ImageButton android:id="@id/next" android:background="@drawable/play_highlight_overlay_action_button" android:layout_width="0.0dip" android:layout_height="fill_parent" android:src="@drawable/ic_fwd_dark" android:scaleType="center" android:layout_weight="1.0" android:contentDescription="@string/accessibility_next" />
            <ImageButton android:id="@id/thumbs_down" android:background="@drawable/play_highlight_overlay_action_button" android:layout_width="0.0dip" android:layout_height="fill_parent" android:src="@drawable/ic_thumbs_down_default" android:scaleType="center" android:layout_weight="1.0" android:contentDescription="@string/accessibility_thumbsDown" />
            <ImageButton android:id="@id/skip_forward" android:background="@drawable/play_highlight_overlay_action_button" android:visibility="gone" android:layout_width="0.0dip" android:layout_height="fill_parent" android:src="@drawable/ic_30_forward" android:scaleType="center" android:layout_weight="1.0" android:contentDescription="@string/accessibility_skip_time_forward" />
        </LinearLayout>
        <FrameLayout android:id="@id/disabled_frame" android:background="@color/white" android:focusable="true" android:focusableInTouchMode="true" android:visibility="gone" android:clickable="true" android:layout_width="fill_parent" android:layout_height="fill_parent" android:alpha="0.8" />
    </FrameLayout>
</merge>