<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@style/PodcastSubscribeDialog">
        <TextView android:id="@id/subscribe_title" android:paddingLeft="@dimen/default_padding" android:paddingTop="6.0dip" android:paddingRight="@dimen/default_padding" android:paddingBottom="6.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@android:style/TextAppearance.Large" />
        <RelativeLayout android:paddingTop="12.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:id="@id/autodl_text" android:text="@string/subdlg_autodownload" style="@style/PodcastSubscribeDialogTextLarge" />
            <TextView android:text="@string/subdlg_autodownload_subtitle_latest_3" android:layout_below="@id/autodl_text" style="@style/PodcastSubscribeDialogTextSmall" />
            <android.support.v7.widget.SwitchCompat android:id="@id/autodownload_switch" style="@style/PodcastSubscribeDialogSwitch" />
        </RelativeLayout>
        <RelativeLayout android:paddingTop="20.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:id="@id/notif_text" android:text="@string/subdlg_notifications" style="@style/PodcastSubscribeDialogTextLarge" />
            <TextView android:text="@string/subdlg_notifyme" android:layout_below="@id/notif_text" style="@style/PodcastSubscribeDialogTextSmall" />
            <android.support.v7.widget.SwitchCompat android:id="@id/notify_switch" style="@style/PodcastSubscribeDialogSwitch" />
        </RelativeLayout>
        <RelativeLayout android:id="@id/playback_order_button" android:paddingTop="20.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:id="@id/playbackorder_text" android:text="@string/subdlg_playbackorder" style="@style/PodcastSubscribeDialogTextLarge" />
            <TextView android:id="@id/subtitle_order" android:layout_below="@id/playbackorder_text" style="@style/PodcastSubscribeDialogTextSmall" />
        </RelativeLayout>
    </LinearLayout>
</ScrollView>