<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center" android:orientation="horizontal" android:background="@color/material_container_bg" android:paddingLeft="@dimen/material_container_action_button_area_padding" android:paddingRight="@dimen/material_container_action_button_area_padding" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.google.android.music.ui.common.HeaderActionButton android:id="@id/library_button" android:layout_width="0.0dip" android:layout_height="wrap_content" android:src="@drawable/ico_addtolibrary" android:text="@string/menu_add_to_my_library" android:layout_weight="1.0" style="@style/HeaderActionButton" />
    <com.google.android.music.ui.common.HeaderActionButton android:id="@id/added_library_button" android:visibility="gone" android:layout_width="0.0dip" android:layout_height="wrap_content" android:src="@drawable/ico_addedtolibrary" android:text="@string/added_to_library_tag" android:layout_weight="1.0" style="@style/HeaderActionButton" />
    <com.google.android.music.ui.common.HeaderActionButton android:id="@id/manage_subscription_button" android:visibility="gone" android:layout_width="0.0dip" android:layout_height="wrap_content" android:src="@drawable/ico_addtolibrary" android:text="@string/subscribe_tag" android:layout_weight="1.0" style="@style/HeaderActionButton" />
    <com.google.android.music.ui.common.HeaderActionButton android:id="@id/share_button" android:layout_width="0.0dip" android:layout_height="wrap_content" android:src="@drawable/ic_share_black" android:text="@string/container_share" android:layout_weight="1.0" style="@style/HeaderActionButton" />
</LinearLayout>