<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/error_screen" android:background="@color/white" android:padding="@dimen/default_padding_xlarge" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/empty_screen_icon_top_margin" android:layout_marginBottom="@dimen/empty_screen_icon_bottom_margin" android:src="@drawable/splash_play_music_144" android:importantForAccessibility="no" />
    <TextView android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/default_padding" android:text="@string/adaptive_error_page_title" style="@style/EmptyScreenText" />
    <TextView android:gravity="center_horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/default_padding" android:text="@string/adaptive_error_page_body" style="@style/EmptyScreenSubText" />
    <Button android:id="@id/retry_button" android:layout_width="wrap_content" android:layout_height="@dimen/sign_up_button_height" android:layout_marginLeft="@dimen/upsell_button_spacing" android:layout_marginTop="@dimen/default_padding_xlarge" android:layout_marginRight="@dimen/upsell_button_spacing" android:maxWidth="@dimen/sign_up_button_max_width" android:text="@string/adaptive_error_page_retry_button" style="@style/AdaptivePageErrorButton" />
    <Button android:id="@id/dismiss_button" android:layout_width="wrap_content" android:layout_height="@dimen/sign_up_button_height" android:layout_marginLeft="@dimen/upsell_button_spacing" android:layout_marginTop="@dimen/default_padding" android:layout_marginRight="@dimen/upsell_button_spacing" android:maxWidth="@dimen/sign_up_button_max_width" android:text="@string/adaptive_error_page_dismiss_button" style="@style/AdaptivePageErrorButton.Secondary" />
</LinearLayout>